--- a/Offer Lagbe/app/src/main/res/layout/activity_main.xml
+++ b/Offer Lagbe/app/src/main/res/layout/activity_main.xml
@@ -6,26 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/readableBottomBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+    </FrameLayout>
 
     <com.iammert.library.readablebottombar.ReadableBottomBar
+        android:id="@+id/readableBottomBar"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias=".5"
         app:layout_constraintStart_toStartOf="parent"
-        app:rbb_tabs="@xml/tabs"
         app:rbb_activeItemType="text"
-        app:rbb_textColor="@color/black"
-        app:rbb_backgroundColor="@color/purple"/>
+        app:rbb_backgroundColor="@color/purple"
+        app:rbb_indicatorColor="@color/page_indicator"
+        app:rbb_tabs="@xml/tabs"
+        app:rbb_textColor="@color/black" />
 
 
 
