--- a/Offer Lagbe/app/src/main/res/values/colors.xml
+++ b/Offer Lagbe/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#FFBB86FC</color>
+    <color name="page_indicator">#9874a7</color>
 
 </resources>
