--- a/Offer Lagbe/app/src/main/res/values/colors.xml
+++ b/Offer Lagbe/app/src/main/res/values/colors.xml
@@ -4,5 +4,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#FFBB86FC</color>
     <color name="page_indicator">#9874a7</color>
+    <color name="profilehomebackgourdfragment">#1b1b1b</color>
+
+
 
 </resources>
