--- a/Offer Lagbe/app/src/main/res/values/colors.xml
+++ b/Offer Lagbe/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="purple">#FFBB86FC</color>
     <color name="page_indicator">#9874a7</color>
     <color name="profilehomebackgourdfragment">#1b1b1b</color>
+    <color name="Flowergirl">#f498ad</color>
+
 
 
 
