--- a/Offer Lagbe/app/src/main/res/layout/activity_main.xml
+++ b/Offer Lagbe/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,20 @@
         app:layout_constraintBottom_toTopOf="@+id/readableBottomBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
 
-    </FrameLayout>
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/toolbar_bg"
+        android:minHeight="?attr/actionBarSize"
+        app:popupTheme="@style/Theme.AppCompat.Light"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.iammert.library.readablebottombar.ReadableBottomBar
         android:id="@+id/readableBottomBar"
@@ -30,7 +41,6 @@
         app:rbb_indicatorColor="@color/page_indicator"
         app:rbb_tabs="@xml/tabs"
         app:rbb_textColor="@color/black" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
