--- a/Offer Lagbe/app/src/main/res/layout/activity_sign_up.xml
+++ b/Offer Lagbe/app/src/main/res/layout/activity_sign_up.xml
@@ -93,7 +93,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayput3">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/companyET"
+            android:id="@+id/companynameET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
