Profile Picture and Cover Photo Fetch from Firebase

--- a/Offer Lagbe/app/src/main/res/layout/fragment_notification.xml
+++ b/Offer Lagbe/app/src/main/res/layout/fragment_notification.xml
@@ -8,7 +8,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -32,7 +32,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/userName" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/TabLayout"
