--- a/Offer Lagbe/app/src/main/res/layout/dashboard_rv_sample.xml
+++ b/Offer Lagbe/app/src/main/res/layout/dashboard_rv_sample.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile_image"
+        android:id="@+id/profileImage"
         android:layout_width="@dimen/_40mdp"
         android:layout_height="@dimen/_40mdp"
         android:padding="4dp"
@@ -21,10 +21,10 @@
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
         android:background="@drawable/yellowcircleprofile"
-        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
-        app:layout_constraintEnd_toEndOf="@+id/profile_image"
-        app:layout_constraintStart_toStartOf="@+id/profile_image"
-        app:layout_constraintTop_toTopOf="@+id/profile_image" />
+        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
+        app:layout_constraintEnd_toEndOf="@+id/profileImage"
+        app:layout_constraintStart_toStartOf="@+id/profileImage"
+        app:layout_constraintTop_toTopOf="@+id/profileImage" />
 
     <TextView
         android:id="@+id/brand_user_name"
@@ -35,9 +35,9 @@
         android:text="Sulekho"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
-        app:layout_constraintStart_toEndOf="@+id/profile_image"
-        app:layout_constraintTop_toTopOf="@+id/profile_image"
+        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
+        app:layout_constraintStart_toEndOf="@+id/profileImage"
+        app:layout_constraintTop_toTopOf="@+id/profileImage"
         app:layout_constraintVertical_bias="0.3" />
 
     <TextView
@@ -55,9 +55,9 @@
         android:layout_width="18dp"
         android:layout_height="18dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
+        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/profile_image"
+        app:layout_constraintTop_toTopOf="@+id/profileImage"
         app:srcCompat="@drawable/more" />
 
     <com.makeramen.roundedimageview.RoundedImageView
@@ -70,7 +70,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_image"
+        app:layout_constraintTop_toBottomOf="@+id/profileImage"
         app:riv_corner_radius="10dip"
         app:riv_mutate_background="true" />
 
