--- a/Offer Lagbe/app/src/main/res/layout/fragment_home.xml
+++ b/Offer Lagbe/app/src/main/res/layout/fragment_home.xml
@@ -50,7 +50,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/profile_image"
+                android:id="@+id/profileImage"
                 android:layout_width="@dimen/_40mdp"
                 android:layout_height="@dimen/_40mdp"
                 android:layout_marginEnd="16dp"
@@ -66,10 +66,10 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="4dp"
                 android:background="@drawable/yellowcircleprofile"
-                app:layout_constraintBottom_toBottomOf="@+id/profile_image"
-                app:layout_constraintEnd_toEndOf="@+id/profile_image"
-                app:layout_constraintStart_toStartOf="@+id/profile_image"
-                app:layout_constraintTop_toTopOf="@+id/profile_image" />
+                app:layout_constraintBottom_toBottomOf="@+id/profileImage"
+                app:layout_constraintEnd_toEndOf="@+id/profileImage"
+                app:layout_constraintStart_toStartOf="@+id/profileImage"
+                app:layout_constraintTop_toTopOf="@+id/profileImage" />
 
             <HorizontalScrollView
                 android:id="@+id/horizontalScrollView"
