--- a/Offer Lagbe/app/src/main/res/layout/friend_rv_sample.xml
+++ b/Offer Lagbe/app/src/main/res/layout/friend_rv_sample.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile_image"
+        android:id="@+id/profileImage"
         android:layout_width="@dimen/_55mdp"
         android:layout_height="@dimen/_55mdp"
         android:padding="4dp"
