--- a/Offer Lagbe/app/src/main/res/layout/fragment_search.xml
+++ b/Offer Lagbe/app/src/main/res/layout/fragment_search.xml
@@ -6,9 +6,10 @@
     tools:context=".Fragment.SearchFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/usersRV"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Search" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
