--- a/Offer Lagbe/app/src/main/res/layout/dashboard_rv_sample.xml
+++ b/Offer Lagbe/app/src/main/res/layout/dashboard_rv_sample.xml
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/archivo_bold"
         android:text="Clothing Brand"
-        android:textSize="8sp"
+        android:textSize="10sp"
         app:layout_constraintStart_toStartOf="@+id/brand_user_name"
         app:layout_constraintTop_toBottomOf="@+id/brand_user_name" />
 
@@ -85,42 +85,63 @@
         app:srcCompat="@drawable/savebookmark" />
 
     <TextView
+        android:id="@+id/postDescription"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/postImg" />
+
+    <TextView
         android:id="@+id/like"
         android:layout_width="61dp"
         android:layout_height="22dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:drawableLeft="@drawable/like"
         android:drawablePadding="10dp"
         android:gravity="center"
         android:text="350"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/postImg" />
+        app:layout_constraintTop_toBottomOf="@+id/postDescription" />
 
     <TextView
         android:id="@+id/comment"
         android:layout_width="61dp"
         android:layout_height="22dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:drawableLeft="@drawable/comment"
         android:drawablePadding="10dp"
         android:gravity="center"
         android:text="50"
         app:layout_constraintStart_toEndOf="@+id/like"
-        app:layout_constraintTop_toBottomOf="@+id/postImg" />
+        app:layout_constraintTop_toTopOf="@+id/like" />
 
     <TextView
         android:id="@+id/share"
         android:layout_width="61dp"
         android:layout_height="22dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
         android:drawableLeft="@drawable/share"
         android:drawablePadding="10dp"
         android:gravity="center"
         android:text="5"
         app:layout_constraintStart_toEndOf="@+id/comment"
-        app:layout_constraintTop_toBottomOf="@+id/postImg" />
+        app:layout_constraintTop_toTopOf="@+id/comment" />
+
+    <View
+        android:id="@+id/view10"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:layout_marginTop="2dp"
+        android:background="@color/LightGrey"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/comment" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
