--- a/Offer Lagbe/app/src/main/res/layout/fragment_profile.xml
+++ b/Offer Lagbe/app/src/main/res/layout/fragment_profile.xml
@@ -209,7 +209,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView8"
+                android:id="@+id/followers"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/merriweather_bold"
