--- a/Offer Lagbe/app/src/main/res/layout/fragment_home.xml
+++ b/Offer Lagbe/app/src/main/res/layout/fragment_home.xml
@@ -98,11 +98,11 @@
                             android:layout_height="match_parent"
                             android:layout_marginStart="16dp"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toEndOf="@+id/story"
+                            app:layout_constraintStart_toEndOf="@+id/addStoryImg"
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <com.makeramen.roundedimageview.RoundedImageView
-                            android:id="@+id/story"
+                            android:id="@+id/addStoryImg"
                             android:layout_width="@dimen/_130mdp"
                             android:layout_height="@dimen/_85mdp"
                             android:layout_marginStart="16dp"
@@ -120,11 +120,11 @@
                             android:id="@+id/view3"
                             android:layout_width="0dp"
                             android:layout_height="0dp"
-                            app:layout_constraintBottom_toBottomOf="@+id/story"
-                            app:layout_constraintEnd_toEndOf="@id/story"
+                            app:layout_constraintBottom_toBottomOf="@+id/addStoryImg"
+                            app:layout_constraintEnd_toEndOf="@id/addStoryImg"
                             app:layout_constraintHorizontal_bias="0.0"
-                            app:layout_constraintStart_toStartOf="@+id/story"
-                            app:layout_constraintTop_toTopOf="@+id/story"
+                            app:layout_constraintStart_toStartOf="@+id/addStoryImg"
+                            app:layout_constraintTop_toTopOf="@+id/addStoryImg"
                             app:layout_constraintVertical_bias="0.0" />
 
                         <ImageView
@@ -132,10 +132,10 @@
                             android:layout_width="@dimen/_30mdp"
                             android:layout_height="@dimen/_30mdp"
                             android:src="@drawable/add"
-                            app:layout_constraintBottom_toBottomOf="@id/story"
-                            app:layout_constraintEnd_toEndOf="@+id/story"
-                            app:layout_constraintStart_toStartOf="@+id/story"
-                            app:layout_constraintTop_toTopOf="@+id/story"
+                            app:layout_constraintBottom_toBottomOf="@id/addStoryImg"
+                            app:layout_constraintEnd_toEndOf="@+id/addStoryImg"
+                            app:layout_constraintStart_toStartOf="@+id/addStoryImg"
+                            app:layout_constraintTop_toTopOf="@+id/addStoryImg"
                             app:layout_constraintVertical_bias="0.3" />
 
                         <TextView
