--- a/Offer Lagbe/app/src/main/res/layout/fragment_profile.xml
+++ b/Offer Lagbe/app/src/main/res/layout/fragment_profile.xml
@@ -30,14 +30,14 @@
 
             <ImageView
                 android:id="@+id/coverPhoto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:src="@drawable/profilefragment__profilecover" />
 
             <View
                 android:id="@+id/view6"
-                android:layout_width="wrap_content"
+                android:layout_width="391dp"
                 android:layout_height="wrap_content" />
 
         </com.github.florent37.diagonallayout.DiagonalLayout>
@@ -303,7 +303,7 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/merriweather_bold"
         android:gravity="center"
-        android:text=" &quot;Welcome to Peaky Closet, where style meets attitude!From tailored blazers to vintage-inspired accessories.Join our fashion revolution and discover a whole new level of sartorial expression at Peaky Closet.&quot;"
+        android:text=" &quot;Apex Shoes, a leading footwear brand in Bangladesh, has been synonymous with quality, style, and comfort since its inception in 1990. It provides a diverse range of footwear options that cater to various tastes and needs.&quot;"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
         app:layout_constraintStart_toStartOf="@+id/cardView"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
