--- a/Offer Lagbe/app/src/main/res/values/preloaded_fonts.xml
+++ b/Offer Lagbe/app/src/main/res/values/preloaded_fonts.xml
@@ -4,5 +4,6 @@
         <item>@font/alike_angular</item>
         <item>@font/archivo_bold</item>
         <item>@font/merriweather_bold</item>
+        <item>@font/roboto_medium</item>
     </array>
 </resources>
