--- a/Offer Lagbe/app/src/main/res/layout/comment_sample.xml
+++ b/Offer Lagbe/app/src/main/res/layout/comment_sample.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profileImage"
-        android:layout_width="@dimen/_60mdp"
-        android:layout_height="@dimen/_60mdp"
+        android:layout_width="@dimen/_45mdp"
+        android:layout_height="@dimen/_45mdp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:padding="4dp"
@@ -29,40 +28,25 @@
         app:layout_constraintTop_toTopOf="@+id/profileImage" />
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/comment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="TextView"
         android:textColor="@color/Black"
         android:textSize="@dimen/_14font_mdp"
-        app:layout_constraintBottom_toTopOf="@+id/companyname"
+        app:layout_constraintBottom_toTopOf="@+id/time"
         app:layout_constraintStart_toEndOf="@+id/profileImage"
         app:layout_constraintTop_toTopOf="@+id/profileImage"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
-        android:id="@+id/companyname"
+        android:id="@+id/time"
         android:layout_width="63dp"
         android:layout_height="16dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/profileImage"
-        app:layout_constraintStart_toStartOf="@+id/name"
-        app:layout_constraintTop_toBottomOf="@+id/name" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/followBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/follow_btn_bg"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:text="Follow"
-        android:textColor="@color/AliceBlue"
-        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/profileImage" />
-
+        app:layout_constraintStart_toStartOf="@+id/comment"
+        app:layout_constraintTop_toBottomOf="@+id/comment" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
