--- a/Offer Lagbe/app/src/main/res/layout/dashboard_rv_sample.xml
+++ b/Offer Lagbe/app/src/main/res/layout/dashboard_rv_sample.xml
@@ -16,9 +16,10 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/statusCircle"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="6dp"
         android:layout_marginTop="4dp"
         android:background="@drawable/yellowcircleprofile"
         app:layout_constraintBottom_toBottomOf="@+id/profileImage"
@@ -63,9 +64,11 @@
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/postImg"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_150mdp"
-        android:layout_marginTop="16dp"
-        android:scaleType="centerCrop"
+        android:layout_height="@dimen/_190mdp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="1dp"
+        android:scaleType="fitXY"
         android:src="@drawable/homefragmentstory02"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -78,7 +81,7 @@
         android:id="@+id/save"
         android:layout_width="18dp"
         android:layout_height="30dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="@+id/postImg"
         app:layout_constraintTop_toTopOf="@+id/postImg"
@@ -101,11 +104,13 @@
         android:layout_width="61dp"
         android:layout_height="22dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="2dp"
         android:drawableLeft="@drawable/like"
         android:drawablePadding="10dp"
         android:gravity="center"
         android:text="350"
+        app:layout_constraintBottom_toTopOf="@+id/view10"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/postDescription" />
 
