--- a/Offer Lagbe/app/src/main/res/layout/notification2sample.xml
+++ b/Offer Lagbe/app/src/main/res/layout/notification2sample.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/statusCircle"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
